Correction contrastes p2

--- a/style.css
+++ b/style.css
@@ -782,6 +782,10 @@ h4 {
     color: #FFA377!important;
 }
 
+.col-sm-12 .tc-white{
+    color: #232323 !important;
+}
+
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #232323!important;
